# Snakes

./: CMakeLists.txt
client/: CMakeLists.txt  client.cc  client.h  main.cc
client/ui/: CMakeLists.txt  ncurses_game_view.cc  ncurses_game_view.h  ui_element.cc  ui_element.h  utils.cc  utils.h  window.cc  window.h
common/: CMakeLists.txt
common/game_model/: CMakeLists.txt  food.cc  food.h  game.cc  game.h  snake.cc  snake.h  table.cc  table.h
common/protobuf/: CMakeLists.txt  message.proto
net/: CMakeLists.txt
net/client/: client.h
net/common/: connection.h  ts_queue.h  typedefs.h  utils.h
net/server/: server.h
server/: CMakeLists.txt  main.cc  server.cc  server.h
